# ExchangeRates

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yaml  gunicorn.conf.py  nginx.conf  performance_test.py  pyproject.toml
exchange_rates/: logger.py  main.py  update_data.py
exchange_rates/api/routers/: base.py  courses.py
exchange_rates/core/: config.py  models.py
exchange_rates/core/settings/: app.py  base.py  development.py  production.py  test.py
exchange_rates/db/: __init__.py  base.py
exchange_rates/db/migrations/: env.py
exchange_rates/db/migrations/versions/: 2024_02_11_0040_init.py
exchange_rates/db/repositories/: courses.py
exchange_rates/db/tables/: __init__.py  courses.py
exchange_rates/models/domain/: __init__.py  courses.py
exchange_rates/models/schemas/: courses.py
exchange_rates/resources/: __init__.py  directions.py  exchangers.py
exchange_rates/services/data_updaters/: base.py  binance.py  coin_gecko.py
exchange_rates/task_iq/: broker.py  tasks.py
